# UnknownEngine

./: .gitignore  .gitmodules  CMakeLists.txt  GenerateVsProject.bat  README.md
Resources/Shaders/: default.fsh  default.vsh
Sources/: GameMock.h  main.cpp
Sources/Engine/: Game.h
Sources/Engine/GameFramework/: Game.cpp  Game.h
Sources/Engine/GameFramework/Components/: ColorRectComponent.cpp  ColorRectComponent.h  Component.cpp  Component.h  SpriteComponent.h
Sources/Engine/GameFramework/Objects/: Actor.cpp  Actor.h
Sources/Engine/Graphics/: Rectangle.cpp  Rectangle.h
Sources/Engine/Resources/: ShaderStorage.cpp  ShaderStorage.h
Sources/Engine/Utils/: Checks.h  FileSystem.cpp  FileSystem.h  Log.cpp  Log.h  Macro.h
Sources/OpenGL/: ErrorHandle.cpp  ErrorHandle.h
Sources/OpenGL/Core/: Buffer.cpp  Buffer.h  BufferLayout.cpp  BufferLayout.h  DataPtr.h  IRenderable.cpp  IRenderable.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  ShaderPart.cpp  ShaderPart.h
Sources/Utils/: Class.h
Sources/WindowSystem/: AppWindow.cpp  AppWindow.h  ISdlWindow.cpp  ISdlWindow.h  InputSystem.cpp  InputSystem.h  OpenglWindow.cpp  OpenglWindow.h  SdlSubsystem.cpp  SdlSubsystem.h  Window.cpp  Window.h
